Normalizer annotation (#77)
* Adds in Normalzied Annotation and convert DTOs to records

Update that converts DTOs to records to ensure true immutability, then bringing in new annotation to normalize characters as and when.

* Created junits and formatted files

* Fixed service class and disabled tests